1.2-kripken/build/testblitspeed.test.log
[1mtestblitspeed.c:86:62: [0m[0;1;31merror: [0m[1mno member named 'alpha' in 'struct SDL_PixelFormat'[0m
        printf("  alpha      : %d\n", (int) surface->format->alpha);
[0;1;32m                                            ~~~~~~~~~~~~~~~  ^
[0m[1mtestblitspeed.c:87:73: [0m[0;1;31merror: [0m[1mno member named 'colorkey' in 'struct SDL_PixelFormat'[0m
        printf("  colorkey   : 0x%X\n", (unsigned int) surface->format->colorkey);
[0;1;32m                                                       ~~~~~~~~~~~~~~~  ^
[0m[1mtestblitspeed.c:119:57: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'SDL_OPENGLBLIT'[0m
        append_sdl_surface_flag(surface, f, sizeof (f), SDL_OPENGLBLIT);
[0;1;32m                                                        ^
[0m[1mtestblitspeed.c:45:81: [0m[0;1;30mnote: [0mexpanded from macro 'append_sdl_surface_flag'[0m
#define append_sdl_surface_flag(a, b, c, fl) __append_sdl_surface_flag(a, b, c, fl, " " #fl)
[0;1;32m                                                                                ^
[0m[1mtestblitspeed.c:312:29: [0m[0;1;31merror: [0m[1mno member named 'alpha' in 'struct SDL_PixelFormat'[0m
    srcalpha = src->format->alpha;
[0;1;32m               ~~~~~~~~~~~  ^
[0m[1mtestblitspeed.c:313:30: [0m[0;1;31merror: [0m[1mno member named 'alpha' in 'struct SDL_PixelFormat'[0m
    dstalpha = dest->format->alpha;
[0;1;32m               ~~~~~~~~~~~~  ^
[0m[1mtestblitspeed.c:339:76: [0m[0;1;31merror: [0m[1mno member named 'alpha' in 'struct SDL_PixelFormat'[0m
    if ((dstalphaflags != origdstalphaflags) || (dstalpha != dest->format->alpha))
[0;1;32m                                                             ~~~~~~~~~~~~  ^
[0m[1mtestblitspeed.c:341:75: [0m[0;1;31merror: [0m[1mno member named 'alpha' in 'struct SDL_PixelFormat'[0m
    if ((srcalphaflags != origsrcalphaflags) || (srcalpha != src->format->alpha))
[0;1;32m                                                             ~~~~~~~~~~~  ^
[0m7 errors generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
